FestiveTechCalendar_122020/01-nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: festtechcal
---
apiVersion: v1
kind: Pod
metadata:
  name: festtechcal
  namespace: festtechcal
  labels:
    app: nginx
spec:
    containers:
    - name: nginx
      image: nginx:latest
      ports:
      - containerPort: 80
